/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object RenameLabelDialogTestTags {
    const val DIALOG_ROOT = "rename_label_dialog:root"
    const val TITLE_TEXT = "rename_label_dialog:title_text"
    const val NAME_TEXT_FIELD = "rename_label_dialog:name_text_field"
    const val CONFIRM_BUTTON = "rename_label_dialog:confirm_button"
    const val DISMISS_BUTTON = "rename_label_dialog:dismiss_button"
}
