/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object ReportBugScreenTestTags {
    const val ROOT_COLUMN = "ReportBugScreen_RootColumn"
    const val TITLE_TEXT_FIELD = "ReportBugScreen_TitleTextField"
    const val DESCRIPTION_TEXT_FIELD = "ReportBugScreen_DescriptionTextField"
    const val SUBMIT_EMAIL_BUTTON = "ReportBugScreen_SubmitEmailButton"
    const val SUBMIT_GITHUB_BUTTON = "ReportBugScreen_SubmitGitHubButton"
}
